crates/rspyts-macros/tests/ui/bridge_serde_on_error_enum.rs
use rspyts::bridge;
use serde::{Deserialize, Serialize};

#[bridge(error, serde)]
#[derive(Debug, Serialize, Deserialize)]
pub enum AdoptedError {
    Failed,
}

fn main() {}
